--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,17 @@ edition = "2018"
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.36.1"
-features = ["Win32_Foundation", "Win32_System_IO"]
+features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock", "Win32_Storage_FileSystem"]
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
+nix = "0.24.2"
+polling = "2.2.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+io-uring = { version = "=0.5.3", features = ["unstable"] }
 
 [dependencies]
 cfg-if = "1.0.0"
+slab = "0.4.7"
+tracing = { version = "0.1.36", default-features = false }
